--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Image Gallery</title>
+<title>Sir Ivan Hancockington's Exquisite Gallery</title>
 </head>
 <body>
 <h1>My Image Gallery</h1>
