--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <a href="page2.html">Page 2</a>
 </nav>
 <div class="gallery">
-<img src="https://sirivanhancockington.github.io/DM1-portfolio" alt="gyatt_fish.gif>
+<img src="https://sirivanhancockington.github.io/DM1-portfolio/dark_goblin.png" alt="Dark Goblin>
 <img src="https://via.placeholder.com/150" alt="Placeholder Image 2">
 <img src="https://via.placeholder.com/150" alt="Placeholder Image 3">
 </div>
