--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 <title>Sir Ivan Hancockington's Exquisite Gallery</title>
 </head>
 <body>
-<h1>My Image Gallery</h1>
+<h1>Sir Ivan Hancockington's Exquisite Gallery</h1>
 <nav>
 <a href="index.html">Home</a>
 <a href="page2.html">Page 2</a>
 </nav>
 <div class="gallery">
-<img src="https://sirivanhancockington.github.io/DM1-portfolio/dark_goblin.png" alt="Dark Goblin>
-<img src="https://via.placeholder.com/150" alt="Placeholder Image 2">
-<img src="https://via.placeholder.com/150" alt="Placeholder Image 3">
+<img src="https://sirivanhancockington.github.io/DM1-portfolio/dark_goblin.png" alt="Dark Goblin">
+<img src="https://sirivanhancockington.github.io/DM1-portfolio/majestic_unicorn.png" alt="Majestic Unicorn">
+<img src="https://sirivanhancockington.github.io/DM1-portfolio/hourglass_of_time.png" alt="Hourglass of Time">
+<img src="https://sirivanhancockington.github.io/DM1-portfolio/glizzy_gladiator.png" alt="Glizzy Gladiator">
 </div>
 <style>
 body {
